--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/samwhindleton/video-game-app#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.12"
   }
