--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^1.0.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "igdb-api-node": "^3.1.3",
     "mongoose": "^5.0.12"
   }
 }
