--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.12"
   }
 }
