--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "bcrypt": "^1.0.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.13"
+  },
+  "engines": {
+    "npm": "5.8.0"
   }
 }
